...
    func errorData(_ error: NSError) {
        DispatchQueue.main.async {
            self.viewBackgroundIndicator.isHidden = true
            self.activityIndicator.isHidden = true
            self.activityIndicator.stopAnimating()
            
            let alert = UIAlertController(title: "Erro", message: error.debugDescription, preferredStyle: .alert)
            alert.addAction(UIAlertAction(title: "OK", style: .default, handler: nil))
            self.present(alert, animated: true, completion: nil)
        }
    }
    
}

